Heat equation working

--- a/Laplace Equation in Circle Test.ipynb
+++ b/Laplace Equation in Circle Test.ipynb
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
        "Text(0.5, 1.0, 'Error')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -304,7 +304,16 @@
     "    # Body force is simply f=4\n",
     "    return 4\n",
     "\n",
+    "dt = 0.1\n",
+    "T = 10.0\n",
+    "t = 0.0\n",
+    "\n",
+    "# Initial conditions\n",
+    "u_prev = np.zeros(mesh.n_vertices)\n",
+    "\n",
+    "# Assemble matrices & body force\n",
     "stiffness = mesh.assemble_stiffness()\n",
+    "mass = mesh.assemble_mass()\n",
     "force_vector = mesh.assemble_body_force(calculate_body_force)\n",
     "\n",
     "# Apply boundary conditions\n",
@@ -315,8 +324,15 @@
     "force_vector[mesh.boundary_vertices] = 0.0\n",
     "\n",
     "# Solve\n",
-    "rhs_vector = force_vector\n",
-    "soln = np.linalg.solve(stiffness, rhs_vector)\n",
+    "lhs_matrix = dt*stiffness + mass\n",
+    "\n",
+    "while t<T:\n",
+    "    rhs_vector = dt*force_vector + mass.dot(u_prev)\n",
+    "    u_next = np.linalg.solve(lhs_matrix, rhs_vector)\n",
+    "    u_prev[:] = u_next[:]\n",
+    "    t+=dt\n",
+    "\n",
+    "soln = u_next\n",
     "\n",
     "# Calculate error\n",
     "error = [\n",
