Mesh tetrahedralisation & visualisation working

--- a/3D Mesh Tests.ipynb
+++ b/3D Mesh Tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,12 +44,14 @@
     "    mesh, _info = pymesh.collapse_short_edges(mesh, tol, preserve_feature=True)\n",
     "    return mesh\n",
     "\n",
-    "def write_mesh(mesh, filename, attributes=[], cell_type=\"triangle\"):\n",
+    "def write_mesh(mesh, filename, attributes=[]):\n",
     "    points = mesh.vertices\n",
-    "    cells = {\"triangle\": mesh.faces,\n",
-    "             \"tetra\": mesh.voxels\n",
-    "            }\n",
+    "    cells = {\"triangle\": mesh.faces}\n",
+    "    if mesh.num_voxels>0:\n",
+    "        cells[\"tetra\"] = mesh.voxels\n",
+    "        \n",
     "    point_data = {name:mesh.get_attribute(name) for name in attributes}\n",
+    "    \n",
     "    meshio.write_points_cells(\n",
     "        filename,\n",
     "        points,\n",
@@ -63,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -115,20 +117,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# input_mesh = pymesh.generate_icosphere(1.0, [0.0, 0.0, 0.0]);\n",
-    "# tetgen = pymesh.tetgen();\n",
-    "# tetgen.points = input_mesh.vertices; # Input points.\n",
-    "# tetgen.triangles = input_mesh.faces; # Input triangles\n",
-    "# tetgen.max_tet_volume = 0.01;\n",
-    "# tetgen.verbosity = 0;\n",
-    "# tetgen.run(); # Execute tetgen\n",
-    "# tetmesh = tetgen.mesh; # Extract output tetrahedral mesh.\n",
-    "\n",
-    "tetmesh = pymesh.tetrahedralize(mesh, CELL_SIZE*5)\n",
+    "tetmesh = pymesh.tetrahedralize(mesh, CELL_SIZE)\n",
     "pymesh.save_mesh(\"meshes/regularised_cell_tetra.ply\", tetmesh)"
    ]
   },
@@ -141,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +169,7 @@
     "tetmesh.add_attribute(\"data\")\n",
     "tetmesh.set_attribute(\"data\", vertex_data)\n",
     "\n",
-    "write_mesh(tetmesh, \"meshes/regularised_cell_tetra_with_data.vtk\", [\"data\"], cell_type=\"tetra\")"
+    "write_mesh(tetmesh, \"meshes/regularised_cell_tetra_with_data.vtk\", [\"data\"])"
    ]
   },
   {
