--- a/3D Mesh Tests.ipynb
+++ b/3D Mesh Tests.ipynb
@@ -117,12 +117,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "tetmesh = pymesh.tetrahedralize(mesh, CELL_SIZE)\n",
-    "pymesh.save_mesh(\"meshes/regularised_cell_tetra.ply\", tetmesh)"
+    "write_mesh(tetmesh, \"meshes/regularised_cell_tetra.vtk\")"
    ]
   },
   {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
