--- a/3D Mesh Tests.ipynb
+++ b/3D Mesh Tests.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
     "tetmesh.add_attribute(\"is_boundary\")\n",
     "tetmesh.set_attribute(\"is_boundary\", is_boundary)\n",
     "\n",
-    "write_mesh(tetmesh, \"meshes/regularised_cell_tetra.vtk\", [\"is_boundary\"])"
+    "write_mesh(tetmesh, \"meshes/regularised_cell_tetra_with_boundary.vtk\", [\"is_boundary\"])"
    ]
   },
   {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,6 +170,13 @@
     "tetmesh.set_attribute(\"data\", vertex_data)\n",
     "\n",
     "write_mesh(tetmesh, \"meshes/regularised_cell_tetra_with_data.vtk\", [\"data\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test steady-state heat equation (i.e. stiffness matrix)"
    ]
   },
   {
@@ -196,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
