Added working (though slightly erroneous) dirichlet boundary condition calculation and nearly working von neumann

--- a/3D Mesh Tests.ipynb
+++ b/3D Mesh Tests.ipynb
@@ -11,6 +11,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pymesh\n",
     "import meshio\n",
+    "import math as m\n",
     "\n",
     "from mesh3d import Mesh3D\n",
     "\n",
@@ -36,36 +37,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "input_mesh = pymesh.load_mesh(\"meshes/sausage_shape.obj\")\n",
     "\n",
-    "mesh = Mesh3D(input_mesh)\n",
-    "\n",
-    "mesh.resize_input_mesh(CELL_SIZE)\n",
+    "mesh = Mesh3D(input_mesh, CELL_SIZE)\n",
     "\n",
     "pymesh.save_mesh(\"meshes/regularised_cell.ply\", mesh.input_mesh)\n",
     "mesh.write_input_mesh(\"meshes/regularised_cell.vtk\")\n",
     "\n",
-    "# mesh.plot_mesh()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Test tetrahedralisation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mesh.tetrahedralise(CELL_SIZE)\n",
     "mesh.write_mesh(\"meshes/regularised_cell_tetra.vtk\")"
    ]
   },
@@ -78,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,10 +73,29 @@
     "    face = tetmesh.faces[i_face]\n",
     "    is_boundary[face] = True\n",
     "\n",
-    "tetmesh.add_attribute(\"is_boundary\")\n",
-    "tetmesh.set_attribute(\"is_boundary\", is_boundary)\n",
+    "mesh.set_attribute(\"is_boundary\", is_boundary)\n",
     "\n",
-    "mesh.write_mesh(\"meshes/regularised_cell_tetra_with_boundary.vtk\", [\"is_boundary\"])"
+    "mesh.write_mesh(\"meshes/regularised_cell_tetra_with_boundary.vtk\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tetmesh = mesh.tetmesh\n",
+    "boundary_mesh = pymesh.compute_outer_hull(mesh.tetmesh)\n",
+    "\n",
+    "is_boundary = np.zeros(tetmesh.num_vertices)\n",
+    "source_faces = boundary_mesh.get_attribute(\"face_sources\").astype(int)\n",
+    "boundary_vertices = np.unique(np.array(tetmesh.faces[source_faces]).flatten())\n",
+    "\n",
+    "is_boundary[boundary_vertices] = True\n",
+    "\n",
+    "mesh.set_attribute(\"is_boundary\", is_boundary)\n",
+    "\n",
+    "mesh.write_mesh(\"meshes/regularised_cell_tetra_with_boundary.vtk\")"
    ]
   },
   {
@@ -106,22 +107,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "vertex_data = tetmesh.vertices[:, 2]\n",
-    "tetmesh.add_attribute(\"data\")\n",
-    "tetmesh.set_attribute(\"data\", vertex_data)\n",
+    "mesh.set_attribute(\"data\", vertex_data)\n",
     "\n",
-    "mesh.write_mesh(\"meshes/regularised_cell_tetra_with_data.vtk\", [\"data\"])"
+    "mesh.write_mesh(\"meshes/regularised_cell_tetra_with_data.vtk\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Test steady-state heat equation (i.e. stiffness matrix)"
+    "# Test steady-state heat equation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dirichlet Condition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_mesh = pymesh.generate_icosphere(1, (0,0,0), refinement_order=4)\n",
+    "test_mesh = Mesh3D(input_mesh, CELL_SIZE)\n",
+    "test_mesh.write_mesh(\"meshes/sphere_mesh.vtk\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of vertices: 8447\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Number of vertices:\", test_mesh.n_vertices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cart2sph(x,y,z):\n",
+    "    XsqPlusYsq = x**2 + y**2\n",
+    "    r = m.sqrt(XsqPlusYsq + z**2)               # r\n",
+    "#     elev = m.atan2(z,m.sqrt(XsqPlusYsq))     # theta\n",
+    "    elev = m.acos(z/r)     # theta\n",
+    "    az = m.atan2(y,x)                           # phi\n",
+    "    return r, elev, az"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_dirichlet_values(vertex):\n",
+    "    r, theta, phi = cart2sph(vertex[0], vertex[1], vertex[2])\n",
+    "    return m.cos(theta)**2\n",
+    "\n",
+    "stiffness = test_mesh.assemble_stiffness()\n",
+    "\n",
+    "# Remove dirichlet boundary points\n",
+    "stiffness[test_mesh.boundary_vertices,:] = 0.0\n",
+    "# And ensure matrix isn't singular\n",
+    "for vertex in test_mesh.boundary_vertices:\n",
+    "    stiffness[vertex, vertex] = 1.0\n",
+    "    \n",
+    "rhs_vector = np.zeros(test_mesh.n_vertices)\n",
+    "\n",
+    "dirichlet_rhs = np.zeros(test_mesh.n_vertices)\n",
+    "dirichlet_rhs[test_mesh.boundary_vertices] = test_mesh.calculate_boundary_values(calculate_dirichlet_values)\n",
+    "\n",
+    "rhs_vector += dirichlet_rhs\n",
+    "\n",
+    "# Solve\n",
+    "soln = np.linalg.solve(stiffness, rhs_vector)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error is 1.266798228440421\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calc_analytical_solution(vertex):\n",
+    "    r, theta, phi = cart2sph(vertex[0], vertex[1], vertex[2])\n",
+    "    c = [1, 0, 2*(r)**2]\n",
+    "    return 1/3*np.polynomial.legendre.legval(m.cos(theta), c)\n",
+    "\n",
+    "analytical_soln = np.array([calc_analytical_solution(v) for v in test_mesh.vertices()])\n",
+    "\n",
+    "# Calculate error\n",
+    "error = np.abs(soln - analytical_soln)\n",
+    "\n",
+    "print(\"Error is\", np.linalg.norm(error))\n",
+    "\n",
+    "test_mesh.set_attribute(\"u\", soln)\n",
+    "test_mesh.set_attribute(\"error\", error)\n",
+    "test_mesh.set_attribute(\"analytical_u\", analytical_soln)\n",
+    "\n",
+    "test_mesh.write_mesh(\"meshes/laplace_equation_dirichlet_result.vtk\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## von Neumann conditions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_mesh = pymesh.generate_icosphere(1, (0,0,0), refinement_order=4)\n",
+    "test_mesh = Mesh3D(input_mesh, CELL_SIZE)\n",
+    "test_mesh.write_mesh(\"meshes/sphere_mesh.vtk\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cart2sph(x,y,z):\n",
+    "    XsqPlusYsq = x**2 + y**2\n",
+    "    r = m.sqrt(XsqPlusYsq + z**2)               # r\n",
+    "#     elev = m.atan2(z,m.sqrt(XsqPlusYsq))     # theta\n",
+    "    elev = m.acos(z/r)     # theta\n",
+    "    az = m.atan2(y,x)                           # phi\n",
+    "    return r, elev, az"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "def calculate_von_neumann_values(vertex):\n",
+    "    r, theta, phi = cart2sph(vertex[0], vertex[1], vertex[2])\n",
+    "    return m.cos(theta)\n",
+    "\n",
+    "stiffness = test_mesh.assemble_stiffness()\n",
+    "# stiffness = test_mesh.assembler.assemble(\"stiffness\")\n",
+    "  \n",
+    "rhs_vector = np.zeros(test_mesh.n_vertices)\n",
+    "\n",
+    "# Incorporate von Neumann condition\n",
+    "boundary_values = test_mesh.calculate_boundary_values(calculate_von_neumann_values)\n",
+    "rhs_vector = test_mesh.assemble_von_neumann_boundary(boundary_values)\n",
+    "\n",
+    "# Incorporate Dirichlet condition\n",
+    "soln = np.zeros(test_mesh.n_vertices)\n",
+    "soln[test_mesh.boundary_vertices[0]] = test_mesh.get_pos(test_mesh.boundary_vertices[0])[2]\n",
+    "\n",
+    "rhs_vector -= np.matmul(stiffness, soln)\n",
+    "\n",
+    "# Solve\n",
+    "soln = np.linalg.solve(stiffness, rhs_vector)\n",
+    "\n",
+    "soln[test_mesh.boundary_vertices[0]] = test_mesh.get_pos(test_mesh.boundary_vertices[0])[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error is 401949.80596763454\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calc_analytical_solution(vertex):\n",
+    "    return vertex[2]\n",
+    "\n",
+    "analytical_soln = np.array([calc_analytical_solution(v) for v in test_mesh.vertices()])\n",
+    "\n",
+    "# Calculate error\n",
+    "error = np.abs(soln - analytical_soln)\n",
+    "\n",
+    "print(\"Error is\", np.linalg.norm(error))\n",
+    "\n",
+    "test_mesh.set_attribute(\"u\", soln)\n",
+    "test_mesh.set_attribute(\"error\", error)\n",
+    "test_mesh.set_attribute(\"analytical_u\", analytical_soln)\n",
+    "\n",
+    "test_mesh.write_mesh(\"meshes/laplace_equation_von_neumann_result.vtk\")"
    ]
   },
   {
@@ -129,37 +338,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def calculate_body_force(vertex):\n",
-    "    # Body force is simply f=4\n",
-    "    return 4.0\n",
-    "\n",
-    "stiffness = mesh.assemble_stiffness()\n",
-    "force_vector = mesh.assemble_body_force(calculate_body_force)\n",
-    "\n",
-    "# Apply boundary conditions\n",
-    "stiffness[mesh.boundary_vertices,:] = 0.0\n",
-    "stiffness[:,mesh.boundary_vertices] = 0.0\n",
-    "for vertex in mesh.boundary_vertices:\n",
-    "    stiffness[vertex, vertex] = 1.0\n",
-    "force_vector[mesh.boundary_vertices] = 0.0\n",
-    "\n",
-    "# Solve\n",
-    "rhs_vector = force_vector\n",
-    "soln = np.linalg.solve(stiffness, rhs_vector)\n",
-    "\n",
-    "# Calculate error\n",
-    "error = [\n",
-    "    abs(soln[i] - analytical_solution(vertex))\n",
-    "    for i, vertex in enumerate(mesh.vertices())]\n",
-    "\n",
-    "print(\"Error is\", np.linalg.norm(error))\n",
-    "\n",
-    "# Plot\n",
-    "fig, ax = plt.subplots(1, 1, figsize=(10,10))\n",
-    "mesh.plot(soln, axis=ax)\n",
-    "ax.set_title('Solution')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
