Lowered cell size and now using pymeshes inbuilt Laplacian matrix calculator

--- a/3D Mesh Tests.ipynb
+++ b/3D Mesh Tests.ipynb
@@ -21,11 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "CELL_SIZE=1e-1"
+    "CELL_SIZE=5e-1"
    ]
   },
   {
@@ -128,30 +128,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dirichlet Condition"
+    "## Dirichlet Condition 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_mesh = pymesh.generate_icosphere(1, (0,0,0), refinement_order=4)\n",
+    "input_mesh = pymesh.generate_icosphere(1, (0,0,0), refinement_order=2)\n",
     "test_mesh = Mesh3D(input_mesh, CELL_SIZE)\n",
     "test_mesh.write_mesh(\"meshes/sphere_mesh.vtk\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of vertices: 8447\n"
+      "Number of vertices: 163\n"
      ]
     }
    ],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,13 +178,26 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(163, 163)\n",
+      "(163, 163)\n"
+     ]
+    }
+   ],
    "source": [
     "def calculate_dirichlet_values(vertex):\n",
     "    r, theta, phi = cart2sph(vertex[0], vertex[1], vertex[2])\n",
     "    return m.cos(theta)**2\n",
     "\n",
     "stiffness = test_mesh.assemble_stiffness()\n",
+    "stiffness = test_mesh.assembler.assemble(\"laplacian\")\n",
+    "print(stiffness.shape)\n",
+    "stiffness = stiffness.todense()\n",
+    "print(stiffness.shape)\n",
     "\n",
     "# Remove dirichlet boundary points\n",
     "stiffness[test_mesh.boundary_vertices,:] = 0.0\n",
@@ -212,7 +225,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error is 1.266798228440421\n"
+      "Error is 1.132892344728772e-15\n"
      ]
     }
    ],
@@ -240,23 +253,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## von Neumann conditions"
+    "## Dirichlet condition 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_mesh = pymesh.generate_icosphere(1, (0,0,0), refinement_order=4)\n",
+    "input_mesh = pymesh.generate_icosphere(1, (0,0,0), refinement_order=2)\n",
     "test_mesh = Mesh3D(input_mesh, CELL_SIZE)\n",
-    "test_mesh.write_mesh(\"meshes/sphere_mesh.vtk\")"
+    "# test_mesh.write_mesh(\"meshes/sphere_mesh.vtk\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +284,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(163, 163)\n",
+      "(163, 163)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculate_dirichlet_values(vertex):\n",
+    "    r, theta, phi = cart2sph(vertex[0], vertex[1], vertex[2])\n",
+    "    return m.cos(theta)\n",
+    "\n",
+    "# stiffness = test_mesh.assemble_stiffness()\n",
+    "stiffness = test_mesh.assembler.assemble(\"laplacian\")\n",
+    "print(stiffness.shape)\n",
+    "stiffness = stiffness.todense()\n",
+    "print(stiffness.shape)\n",
+    "\n",
+    "# Remove dirichlet boundary points\n",
+    "stiffness[test_mesh.boundary_vertices,:] = 0.0\n",
+    "# And ensure matrix isn't singular\n",
+    "for vertex in test_mesh.boundary_vertices:\n",
+    "    stiffness[vertex, vertex] = 1.0\n",
+    "    \n",
+    "rhs_vector = np.zeros(test_mesh.n_vertices)\n",
+    "\n",
+    "dirichlet_rhs = np.zeros(test_mesh.n_vertices)\n",
+    "dirichlet_rhs[test_mesh.boundary_vertices] = test_mesh.calculate_boundary_values(calculate_dirichlet_values)\n",
+    "\n",
+    "rhs_vector += dirichlet_rhs\n",
+    "\n",
+    "# Solve\n",
+    "soln = np.linalg.solve(stiffness, rhs_vector)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error is 1.2506214487394732e-15\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calc_analytical_solution(vertex):\n",
+    "    return vertex[2]\n",
+    "\n",
+    "analytical_soln = np.array([calc_analytical_solution(v) for v in test_mesh.vertices()])\n",
+    "\n",
+    "# Calculate error\n",
+    "error = np.abs(soln - analytical_soln)\n",
+    "\n",
+    "print(\"Error is\", np.linalg.norm(error))\n",
+    "\n",
+    "test_mesh.set_attribute(\"u\", soln)\n",
+    "test_mesh.set_attribute(\"error\", error)\n",
+    "test_mesh.set_attribute(\"analytical_u\", analytical_soln)\n",
+    "\n",
+    "test_mesh.write_mesh(\"meshes/laplace_equation_dirichlet_2_result.vtk\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## von Neumann conditions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_mesh = pymesh.generate_icosphere(1, (0,0,0), refinement_order=2)\n",
+    "test_mesh = Mesh3D(input_mesh, CELL_SIZE)\n",
+    "test_mesh.write_mesh(\"meshes/sphere_mesh.vtk\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cart2sph(x,y,z):\n",
+    "    XsqPlusYsq = x**2 + y**2\n",
+    "    r = m.sqrt(XsqPlusYsq + z**2)               # r\n",
+    "#     elev = m.atan2(z,m.sqrt(XsqPlusYsq))     # theta\n",
+    "    elev = m.acos(z/r)     # theta\n",
+    "    az = m.atan2(y,x)                           # phi\n",
+    "    return r, elev, az"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {
     "scrolled": true
    },
@@ -280,38 +399,42 @@
     "def calculate_von_neumann_values(vertex):\n",
     "    r, theta, phi = cart2sph(vertex[0], vertex[1], vertex[2])\n",
     "    return m.cos(theta)\n",
+    "#     return 0.0\n",
     "\n",
-    "stiffness = test_mesh.assemble_stiffness()\n",
-    "# stiffness = test_mesh.assembler.assemble(\"stiffness\")\n",
+    "stiffness = test_mesh.assembler.assemble(\"laplacian\")\n",
+    "stiffness = stiffness.todense()\n",
     "  \n",
     "rhs_vector = np.zeros(test_mesh.n_vertices)\n",
     "\n",
     "# Incorporate von Neumann condition\n",
     "boundary_values = test_mesh.calculate_boundary_values(calculate_von_neumann_values)\n",
-    "rhs_vector = test_mesh.assemble_von_neumann_boundary(boundary_values)\n",
+    "rhs_vector += test_mesh.assemble_von_neumann_boundary(boundary_values)\n",
     "\n",
     "# Incorporate Dirichlet condition\n",
-    "soln = np.zeros(test_mesh.n_vertices)\n",
-    "soln[test_mesh.boundary_vertices[0]] = test_mesh.get_pos(test_mesh.boundary_vertices[0])[2]\n",
+    "fixed_boundary_vertex = test_mesh.boundary_vertices[0]\n",
     "\n",
-    "rhs_vector -= np.matmul(stiffness, soln)\n",
+    "# Remove dirichlet boundary points\n",
+    "stiffness[fixed_boundary_vertex,:] = 0.0\n",
+    "# And ensure matrix isn't singular\n",
+    "for vertex in [fixed_boundary_vertex]:\n",
+    "    stiffness[vertex, vertex] = 1.0\n",
+    "\n",
+    "rhs_vector[fixed_boundary_vertex] = test_mesh.get_pos(fixed_boundary_vertex)[2]\n",
     "\n",
     "# Solve\n",
-    "soln = np.linalg.solve(stiffness, rhs_vector)\n",
-    "\n",
-    "soln[test_mesh.boundary_vertices[0]] = test_mesh.get_pos(test_mesh.boundary_vertices[0])[2]"
+    "soln = np.linalg.solve(stiffness, rhs_vector)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error is 401949.80596763454\n"
+      "Error is 1.9459738619672986\n"
      ]
     }
    ],
