von Neumann boundary conditions now working

--- a/3D Mesh Tests.ipynb
+++ b/3D Mesh Tests.ipynb
@@ -21,11 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "CELL_SIZE=5e-1"
+    "CELL_SIZE=1e-1"
    ]
   },
   {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,6 @@
     "    r, theta, phi = cart2sph(vertex[0], vertex[1], vertex[2])\n",
     "    return m.cos(theta)**2\n",
     "\n",
-    "stiffness = test_mesh.assemble_stiffness()\n",
     "stiffness = test_mesh.assembler.assemble(\"laplacian\")\n",
     "print(stiffness.shape)\n",
     "stiffness = stiffness.todense()\n",
@@ -218,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,22 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cart2sph(x,y,z):\n",
-    "    XsqPlusYsq = x**2 + y**2\n",
-    "    r = m.sqrt(XsqPlusYsq + z**2)               # r\n",
-    "#     elev = m.atan2(z,m.sqrt(XsqPlusYsq))     # theta\n",
-    "    elev = m.acos(z/r)     # theta\n",
-    "    az = m.atan2(y,x)                           # phi\n",
-    "    return r, elev, az"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -298,8 +282,7 @@
    ],
    "source": [
     "def calculate_dirichlet_values(vertex):\n",
-    "    r, theta, phi = cart2sph(vertex[0], vertex[1], vertex[2])\n",
-    "    return m.cos(theta)\n",
+    "    return vertex[2]\n",
     "\n",
     "# stiffness = test_mesh.assemble_stiffness()\n",
     "stiffness = test_mesh.assembler.assemble(\"laplacian\")\n",
@@ -326,14 +309,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error is 1.2506214487394732e-15\n"
+      "Error is 1.1632857603153942e-17\n"
      ]
     }
    ],
@@ -364,42 +347,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_mesh = pymesh.generate_icosphere(1, (0,0,0), refinement_order=2)\n",
+    "input_mesh = pymesh.generate_icosphere(1, (0,0,0), refinement_order=4)\n",
     "test_mesh = Mesh3D(input_mesh, CELL_SIZE)\n",
     "test_mesh.write_mesh(\"meshes/sphere_mesh.vtk\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cart2sph(x,y,z):\n",
-    "    XsqPlusYsq = x**2 + y**2\n",
-    "    r = m.sqrt(XsqPlusYsq + z**2)               # r\n",
-    "#     elev = m.atan2(z,m.sqrt(XsqPlusYsq))     # theta\n",
-    "    elev = m.acos(z/r)     # theta\n",
-    "    az = m.atan2(y,x)                           # phi\n",
-    "    return r, elev, az"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "def calculate_von_neumann_values(vertex):\n",
-    "    r, theta, phi = cart2sph(vertex[0], vertex[1], vertex[2])\n",
-    "    return m.cos(theta)\n",
-    "#     return 0.0\n",
+    "    return vertex[2]\n",
     "\n",
     "stiffness = test_mesh.assembler.assemble(\"laplacian\")\n",
     "stiffness = stiffness.todense()\n",
@@ -427,14 +393,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error is 1.9459738619672986\n"
+      "Error is 0.03953208674935563\n"
      ]
     }
    ],
@@ -452,6 +418,10 @@
     "test_mesh.set_attribute(\"u\", soln)\n",
     "test_mesh.set_attribute(\"error\", error)\n",
     "test_mesh.set_attribute(\"analytical_u\", analytical_soln)\n",
+    "\n",
+    "is_boundary = np.zeros(test_mesh.n_vertices)\n",
+    "is_boundary[test_mesh.boundary_vertices] = 1.0\n",
+    "test_mesh.set_attribute(\"is_boundary\", is_boundary)\n",
     "\n",
     "test_mesh.write_mesh(\"meshes/laplace_equation_von_neumann_result.vtk\")"
    ]
