3d heat equation working with dirichlet conditions

--- a/3D Mesh Tests.ipynb
+++ b/3D Mesh Tests.ipynb
@@ -21,11 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "CELL_SIZE=1e-1"
+    "CELL_SIZE=5e-1"
    ]
   },
   {
@@ -286,9 +286,7 @@
     "\n",
     "# stiffness = test_mesh.assemble_stiffness()\n",
     "stiffness = test_mesh.assembler.assemble(\"laplacian\")\n",
-    "print(stiffness.shape)\n",
     "stiffness = stiffness.todense()\n",
-    "print(stiffness.shape)\n",
     "\n",
     "# Remove dirichlet boundary points\n",
     "stiffness[test_mesh.boundary_vertices,:] = 0.0\n",
@@ -347,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -393,14 +391,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error is 0.03953208674935563\n"
+      "Error is 0.029249456401662367\n"
      ]
     }
    ],
@@ -424,6 +422,120 @@
     "test_mesh.set_attribute(\"is_boundary\", is_boundary)\n",
     "\n",
     "test_mesh.write_mesh(\"meshes/laplace_equation_von_neumann_result.vtk\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Heat Equation (Dirichlet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_mesh = pymesh.generate_icosphere(1, (0,0,0), refinement_order=2)\n",
+    "test_mesh = Mesh3D(input_mesh, CELL_SIZE)\n",
+    "test_mesh.write_mesh(\"meshes/sphere_mesh.vtk\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cart2sph(x,y,z):\n",
+    "    XsqPlusYsq = x**2 + y**2\n",
+    "    r = m.sqrt(XsqPlusYsq + z**2)               # r\n",
+    "#     elev = m.atan2(z,m.sqrt(XsqPlusYsq))     # theta\n",
+    "    elev = m.acos(z/r)     # theta\n",
+    "    az = m.atan2(y,x)                           # phi\n",
+    "    return r, elev, az"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_dirichlet_values(vertex):\n",
+    "    return 0.5\n",
+    "\n",
+    "def calculate_initial_condition(vertex):\n",
+    "    if vertex[0] < 0.0:\n",
+    "        return 1.0\n",
+    "    else:\n",
+    "        return 0.0\n",
+    "\n",
+    "def set_initial_conditions(mesh):\n",
+    "    return np.array(list(map(calculate_initial_condition, mesh.vertices())))\n",
+    "\n",
+    "stiffness = np.asarray(test_mesh.assembler.assemble(\"laplacian\").todense())\n",
+    "mass = np.asarray(test_mesh.assembler.assemble(\"mass\").todense())\n",
+    "\n",
+    "dirichlet_rhs = np.zeros(test_mesh.n_vertices)\n",
+    "dirichlet_rhs[test_mesh.boundary_vertices] = test_mesh.calculate_boundary_values(calculate_dirichlet_values)\n",
+    "\n",
+    "# Remove dirichlet boundary points\n",
+    "stiffness[test_mesh.boundary_vertices,:] = 0.0\n",
+    "# And ensure matrix isn't singular\n",
+    "for vertex in test_mesh.boundary_vertices:\n",
+    "    stiffness[vertex, vertex] = 1.0\n",
+    "    \n",
+    "dt = 0.1\n",
+    "T = 10.0\n",
+    "t = 0.0\n",
+    "\n",
+    "# Initial conditions\n",
+    "u0 = set_initial_conditions(test_mesh)\n",
+    "u_prev = set_initial_conditions(test_mesh)\n",
+    "\n",
+    "# Solve\n",
+    "lhs_matrix = dt*stiffness + mass\n",
+    "\n",
+    "while t<T:\n",
+    "    rhs_vector = mass @ u_prev + dt*(dirichlet_rhs)\n",
+    "    u_next = np.linalg.solve(lhs_matrix, rhs_vector)\n",
+    "    u_prev[:] = u_next[:]\n",
+    "    t+=dt\n",
+    "\n",
+    "soln = u_next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error is 1.4325749365178209e-15\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calc_analytical_solution(vertex):\n",
+    "    return 0.5\n",
+    "\n",
+    "analytical_soln = np.array([calc_analytical_solution(v) for v in test_mesh.vertices()])\n",
+    "\n",
+    "# Calculate error\n",
+    "error = np.abs(soln - analytical_soln)\n",
+    "\n",
+    "print(\"Error is\", np.linalg.norm(error))\n",
+    "\n",
+    "test_mesh.set_attribute(\"u\", soln)\n",
+    "test_mesh.set_attribute(\"error\", error)\n",
+    "test_mesh.set_attribute(\"analytical_u\", analytical_soln)\n",
+    "\n",
+    "test_mesh.write_mesh(\"meshes/heat_equation_dirichlet_result.vtk\")"
    ]
   },
   {
