3d heat equation working with von neumann conditions

--- a/3D Mesh Tests.ipynb
+++ b/3D Mesh Tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,21 +444,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cart2sph(x,y,z):\n",
-    "    XsqPlusYsq = x**2 + y**2\n",
-    "    r = m.sqrt(XsqPlusYsq + z**2)               # r\n",
-    "#     elev = m.atan2(z,m.sqrt(XsqPlusYsq))     # theta\n",
-    "    elev = m.acos(z/r)     # theta\n",
-    "    az = m.atan2(y,x)                           # phi\n",
-    "    return r, elev, az"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
    "outputs": [],
@@ -536,6 +521,108 @@
     "test_mesh.set_attribute(\"analytical_u\", analytical_soln)\n",
     "\n",
     "test_mesh.write_mesh(\"meshes/heat_equation_dirichlet_result.vtk\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Heat Equation (von Neumann)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_mesh = pymesh.generate_icosphere(1, (0,0,0), refinement_order=4)\n",
+    "test_mesh = Mesh3D(input_mesh, CELL_SIZE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_von_neumann_values(vertex):\n",
+    "    return vertex[2]\n",
+    "\n",
+    "def calculate_initial_condition(vertex):\n",
+    "    return 0.0\n",
+    "\n",
+    "def set_initial_conditions(mesh):\n",
+    "    return np.array(list(map(calculate_initial_condition, mesh.vertices())))\n",
+    "\n",
+    "stiffness = np.asarray(test_mesh.assembler.assemble(\"laplacian\").todense())\n",
+    "mass = np.asarray(test_mesh.assembler.assemble(\"mass\").todense())\n",
+    "\n",
+    "# Incorporate von Neumann condition\n",
+    "boundary_values = test_mesh.calculate_boundary_values(calculate_von_neumann_values)\n",
+    "von_neumann_rhs = test_mesh.assemble_von_neumann_boundary(boundary_values)\n",
+    "\n",
+    "# Incorporate Dirichlet condition\n",
+    "fixed_boundary_vertex = test_mesh.boundary_vertices[0]\n",
+    "\n",
+    "# Remove dirichlet boundary points\n",
+    "stiffness[fixed_boundary_vertex,:] = 0.0\n",
+    "# And ensure matrix isn't singular\n",
+    "for vertex in [fixed_boundary_vertex]:\n",
+    "    stiffness[vertex, vertex] = 1.0\n",
+    "\n",
+    "dirichlet_rhs = np.zeros(test_mesh.n_vertices)\n",
+    "dirichlet_rhs[fixed_boundary_vertex] = test_mesh.get_pos(fixed_boundary_vertex)[2]\n",
+    "    \n",
+    "dt = 0.1\n",
+    "T = 10.0\n",
+    "t = 0.0\n",
+    "\n",
+    "# Initial conditions\n",
+    "u0 = set_initial_conditions(test_mesh)\n",
+    "u_prev = set_initial_conditions(test_mesh)\n",
+    "\n",
+    "# Solve\n",
+    "lhs_matrix = dt*stiffness + mass\n",
+    "\n",
+    "while t<T:\n",
+    "    rhs_vector = mass @ u_prev + dt*(dirichlet_rhs + von_neumann_rhs)\n",
+    "    u_next = np.linalg.solve(lhs_matrix, rhs_vector)\n",
+    "    u_prev[:] = u_next[:]\n",
+    "    t+=dt\n",
+    "\n",
+    "soln = u_next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error is 0.029262937280549555\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calc_analytical_solution(vertex):\n",
+    "    return vertex[2]\n",
+    "\n",
+    "analytical_soln = np.array([calc_analytical_solution(v) for v in test_mesh.vertices()])\n",
+    "\n",
+    "# Calculate error\n",
+    "error = np.abs(soln - analytical_soln)\n",
+    "\n",
+    "print(\"Error is\", np.linalg.norm(error))\n",
+    "\n",
+    "test_mesh.set_attribute(\"u\", soln)\n",
+    "test_mesh.set_attribute(\"error\", error)\n",
+    "test_mesh.set_attribute(\"analytical_u\", analytical_soln)\n",
+    "\n",
+    "test_mesh.write_mesh(\"meshes/heat_equation_von_neumann_result.vtk\")"
    ]
   },
   {
